# lldb-mcp-server

./: .gitignore  .mcp.json  .mcp.json.http  .mcp.linux.json  CHANGELOG.md  CLAUDE.md  HTTP_MCP_SETUP.md  README.en.md  README.md  config.json  mcp.json  pyproject.toml  smithery.yaml
.codex/: config.toml
.github/workflows/: ci.yml
dev_docs/: DESIGN.md  FEATURES.md  PLAN.md  REVIEW.md  TASK_SUMMARY.md
dev_docs/features/: 01-session-management.md  02-target-control.md  05-inspection.md  06-memory-operations.md  07-watchpoints.md  09-security-analysis.md  13-core-dump-support.md
dev_docs/functions/: 03-breakpoints.md  04-execution-control.md  05-inspection.md  08-advanced-tools.md  10-register-operations.md  11-symbol-search.md  12-module-management.md
docs/: CONFIGURATION.md  CONFIGURATION.zh.md  FEATURES.md  FEATURES.zh.md  LINUX_INSTALLATION.md  README.en.md  README.zh.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh.md  USAGE.md  USAGE.zh.md  WINDOWS_INSTALLATION.md
examples/client/: AGENTS.md  PROMPT.md  config.py  mcp.json  mcp_client.py  run_debug_flow.py
examples/client/c_test/: DEBUG_SESSION_SUMMARY.md  (+5 more)
scripts/: README.md  check_test_binaries.sh  run_mcp_server.sh  setup_lldb_env.sh  test_transcript_invalid.txt  test_transcript_invalid.verification.json  test_transcript_valid.txt  test_transcript_valid.verification.json  verify_mcp_usage.py
skills/lldb-debug/: SKILL.md
skills/lldb-debugger/: INTERACTIVE_DEBUGGING.md  skill.md
src/lldb_mcp_server/: fastmcp_server.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_ai_debugging.py
(+31 files in other folders)
